todouideploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoui
  template:
    metadata:
      labels:
        app: todoui
    spec:
      containers:
      - name: todoui
        image: devramacr1.azurecr.io/ram-repository:103
        ports:
        - containerPort: 80
