todouisvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoui
spec:
  selector:
    app: todoui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
